--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Submit" class="contact__button button">
+                    <form action="https://formspree.io/f/movqakzl" method="POST" class="contact__form">
+                        <input type="text" placeholder="name" class="contact__input" required>
+                        <input type="mail" placeholder="email" class="contact__input" required>
+                        <textarea name="message" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="submit" value="Submit" class="contact__button button" required>
                     </form>
                 </div>
             </section>
